<resources>
    <string name="app_name">FiveSYS</string>

    <!--Login Activity-->
    <string name="login">Iniciando Sesion</string>
    <string name="version">V 1.8</string>
    <string name="user">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>


    <string name="img">Imagen</string>
    <string name="nro_documento">Nro Documento</string>
    <string name="clave">Clave</string>
    <string name="tipo_de_documento">Tipo de Documento</string>
    <string name="tab1">General</string>
    <string name="tab2">Observaciones</string>
    <string name="tab3">Puntos Fijos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="mensajeFoto">Foto no encontrada</string>
    <string name="s1">S1: </string>
    <string name="s2">S2: </string>
    <string name="s3">S3: </string>
    <string name="s4">S4: </string>
    <string name="s5">S5: </string>
    <string name="s11">S1</string>
    <string name="s22">S2</string>
    <string name="s33">S3</string>
    <string name="s44">S4</string>
    <string name="s55">S5</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="codigo">Codigo</string>
    <string name="estado">Estado</string>
    <string name="fecha_registro">Fecha Registro</string>
    <string name="fecha_inicio_programado">Fecha Inicio Programado</string>
    <string name="pendiente">Pendiente</string>
    <string name="area">Area</string>
    <string name="sector">Sector</string>
    <string name="responsable">Responsable</string>
    <string name="descripcion">Descripcion</string>
    <string name="filtro">Filtro</string>

    <string name="tomarFoto">Tomar Foto</string>
    <string name="elegirFoto">Elegir Foto</string>
    <string name="observacion">Observación</string>
    <string name="edit">Editar</string>
    <string name="categoria">Categoria</string>
    <string name="componente">Componente</string>
    <string name="referencia">Referencia</string>
    <string name="aspecto_observado">Aspecto Observado</string>
    <string name="eliminar">Eliminar</string>
    <string name="detalle">Detalle</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="correo">Correo</string>
    <string name="nueva_clave">Nueva clave</string>
    <string name="clave_actual">Clave Actual</string>
    <string name="confirmar_nueva_clave">Confirmar Nueva Clave</string>
    <string name="guardar">Guardar</string>
    <string name="modo_off_line">Modo Offline</string>
    <string name="phone">Telefono</string>
    <string name="sector_work">Sector de Trabajo</string>
    <string name="confirmar_clave">Confirmar Clave</string>
    <string name="registrar">REGISTRAR</string>
    <string name="modo_online">Modo Online</string>
    <string name="content_permission">\"Debes de aceptar los permisos para poder acceder a la funcion.\"</string>
    <string name="iniciando_sesion">Iniciando Sesión</string>
    <string name="see">Ver</string>
    <string name="email">Enviar Correo</string>
    <string name="ingrese_email">Ingrese Email</string>
    <string name="send">Enviar</string>
    <string name="modo_en_linea">Modo en Linea</string>
</resources>
